[gd_scene load_steps=8 format=3 uid="uid://xl88hvrqixpm"]

[ext_resource type="Texture2D" uid="uid://drdxxh440gt62" path="res://sprites/player/health_circle.png" id="1_ffqaa"]
[ext_resource type="Script" uid="uid://dbs7c24pv3ak7" path="res://pickups/item/item_pickup.gd" id="1_niui7"]
[ext_resource type="Texture2D" uid="uid://r2jk2n87hsle" path="res://sprites/items/sword.png" id="2_n3srn"]
[ext_resource type="Theme" uid="uid://c6j20s0418q2g" path="res://resources/main_theme.tres" id="3_sy56y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_qjdgy"]
radius = 142.088

[sub_resource type="CircleShape2D" id="CircleShape2D_iilja"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t3rrx"]
bg_color = Color(0.211765, 0.211765, 0.211765, 0.392157)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 15.0
expand_margin_top = 10.0
expand_margin_right = 15.0
expand_margin_bottom = 10.0

[node name="ItemPickup" type="Area2D" groups=["Pickups"]]
collision_layer = 2
collision_mask = 2
monitoring = false
script = ExtResource("1_niui7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_qjdgy")

[node name="ItemSprite" type="TextureRect" parent="."]
modulate = Color(1, 1.63529, 1.98039, 1)
offset_left = -69.0
offset_top = -71.0
offset_right = 291.0
offset_bottom = 289.0
scale = Vector2(0.38848, 0.4)
texture = ExtResource("2_n3srn")

[node name="ItemHalo" type="Sprite2D" parent="."]
modulate = Color(3, 2, 1, 1)
position = Vector2(0, -2.98023e-07)
texture = ExtResource("1_ffqaa")

[node name="PickupArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="PickupHitbox" type="CollisionShape2D" parent="PickupArea"]
shape = SubResource("CircleShape2D_iilja")

[node name="ItemInfo" type="PanelContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2
theme = ExtResource("3_sy56y")
theme_override_styles/panel = SubResource("StyleBoxFlat_t3rrx")

[node name="VBoxContainer" type="VBoxContainer" parent="ItemInfo"]
layout_mode = 2
mouse_filter = 2

[node name="ItemName" type="Label" parent="ItemInfo/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Longer Name "

[node name="ItemDescription" type="Label" parent="ItemInfo/VBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Description"
autowrap_mode = 3
